refactor: 프로젝트 패키지 및 구조 변경